# build-my-own-x

./: .gitignore  .gitmodules  .gitmojirc.json  README.md  rust-example.rs  test.cpp
build-react/: index.js
building_makemore/: bigram.py  makemore.py  makemore_part1_bigrams.py  makemore_part2_mlp.py  makemore_part3_bn.py  makemore_part5_cnn1.py  makremore_part4_backpropninja.py  mlp.py  norm.py
c++17/: .gitignore  CMakeLists.txt  CMakePresets.json
c++17/src/: main.cpp
c++17/src/ch1/: CMakeLists.txt  main.cpp
c++20_complete_guide/: CMakeLists.txt
c++20_complete_guide/ch1/: CMakeLists.txt
c++20_complete_guide/ch1/src/: operator.cpp
c++20_complete_guide/ch10/: CMakeLists.txt
c++20_complete_guide/ch10/src/: main.cpp
c++20_complete_guide/ch11/: CMakeLists.txt
c++20_complete_guide/ch11/src/: main.cpp
c++20_complete_guide/ch12/: CMakeLists.txt
c++20_complete_guide/ch12/src/: main.cpp  semaphore.cpp  test_jthread.cpp
c++20_complete_guide/ch14/: CMakeLists.txt
c++20_complete_guide/ch14/include/: Awaiter.hpp  CoroTask.hpp
c++20_complete_guide/ch14/src/: main.cpp
c++20_complete_guide/ch16/: CMakeLists.txt
c++20_complete_guide/ch16/include/: MyMod.cppm  Square.cppm  mod1.cppm  mod1price.cpp  mod2.cpp  mod2order.cppp  mod3customer.cppm  proModule.cppm  proModule2.cppm  proModule2test.cppm
c++20_complete_guide/ch16/src/: main.cpp
c++20_complete_guide/ch2/: CMakeLists.txt
c++20_complete_guide/ch2/include/: mini_math.hpp
c++20_complete_guide/ch2/src/: auto_type.cpp  math.cpp
c++20_complete_guide/ch3/: CMakeLists.txt
c++20_complete_guide/ch3/include/: templates.hpp
c++20_complete_guide/ch3/src/: ConceptMain.cpp  main.cpp  semantic_constraint.cpp
c++20_complete_guide/ch4/: CMakeLists.txt
c++20_complete_guide/ch4/src/: conceptDef.cpp  main.cpp
c++20_complete_guide/ch5/: CMakeLists.txt
c++20_complete_guide/ch5/src/: main.cpp
c++20_complete_guide/ch6/: CMakeLists.txt
c++20_complete_guide/ch6/src/: lazyCompute.cpp  main.cpp
c++20_complete_guide/ch7/: CMakeLists.txt
c++20_complete_guide/ch7/src/: main.cpp
c++20_complete_guide/ch9/: CMakeLists.txt
c++20_complete_guide/ch9/src/: lazyCompute.cpp  main.cpp
c++20_complete_guide/cmake/: build_types.cmake  cflags.cmake
c++20_complete_guide/configured/: CMakeLists.txt  config.hpp.in
c++20_complete_guide/tests/: test.cpp
c_cpp_examples/cpp_examples/: MemoryBlock.cpp  MemoryBlock.h
c_cpp_examples/dll_example/: CMakeCache.txt  CMakeLists.txt
c_cpp_examples/dll_example/mathcal/: CMakeLists.txt
c_cpp_examples/dll_example/mathcal/include/: mathcal.hpp
c_cpp_examples/dll_example/mathcal/src/: mathcal.cpp
c_cpp_examples/dll_example/src/: main.cpp
c_cpp_examples/exceptions_in_cpp/: main.cpp
c_cpp_examples/pointers_in_c/: .clangd  best_practice.c  da_append.c  da_append.s  pointers.c  singly_linked_list.c
cpp_concurrency/: CMakeLists.txt  CMakePresets.json
cpp_concurrency/src/: atomic_op.cpp  example.cpp  main.cpp  oop.cpp  times.cpp
crack-gui/: CMakeLists.txt  CMakePresets.json  imgui.ini  main.cpp
crack-gui/app/: main.cpp
crack-gui/cmake/: sanitizer.cmake
crack-gui/demos/: demo.cpp
cs106L/makeaclass_starter/: class.cpp  class.h  main.cpp
cs106L/marriagepact_starter/: main.cpp
cs106L/simpleenroll_starter/: main.cpp  utils.cpp
cs106L/treebook_starter/: main.cpp  user.cpp  user.h
cs106L/weatherforecast_starter/: main.cpp  output.txt
cs110l/proRust/: Cargo.toml
cs144/apps/: webget.cc
cs144/src/: byte_stream.cc  byte_stream.hh  network_interface.cc  network_interface.hh  reassembler.cc  reassembler.hh  router.cc  router.hh  tcp_receiver.cc  tcp_receiver.hh  tcp_sender.cc  tcp_sender.hh  (+1 more)
css-challenges/: README.md
cuda101/: add.cu  add.exp  blocks.cu  hello.cu  hello.exp
design_patterns_in_cpp/: adapter.cpp  factory_method.cpp  observer.cpp  readme.md  singleton.cpp  strategy.cpp
design_patterns_in_modern_cpp/: .clang-format  .clang-tidy  .gitignore  meson.build
drowning-in-codes/: README.md  singleton.cpp
mini-cpp/: main.cpp
mini-json-parser/: JSONNode.h  JSONParser.h  Tokenizer.h  example.json  main.cpp
mini-project-starter/: Cargo.toml  readme.md
mini-project-starter/src/: main.rs
mini-project-starter/src/templates/: CMakeLists_exe.txt.in  CMakeLists_shared.txt.in  CMakeLists_static.txt.in  CMakePresets.json  README.md  gitignore.txt
mini-project-starter/src/templates/cmake/: copy_target.cmake
mini-project-starter/src/utils/: mod.rs
mini-project-starter/src/utils/project_info/: mod.rs
modern_cmake_project_arch/: CMakeLists.txt  Makefile
modern_cmake_project_arch/.github/workflows/: documentation.yml
modern_cmake_project_arch/app/: CMakeLists.txt  main.cpp
modern_cmake_project_arch/cmake/: AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
modern_cmake_project_arch/configured/: CMakeLists.txt  config.hpp.in
modern_cmake_project_arch/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
modern_cmake_project_arch/tests/: CMakeLists.txt  main.cpp
mygrad/: README.md
mygrad/cpp/: .clang-format  .clangd  CMakeLists.txt  main.cpp  test.cpp
mygrad/cpp/include/: engine.hpp  nn.hpp
pointers_in_c/: binary_search_tree.c  c11&c18.c  readme.md  simple_interpreter.c
procss/: main.scss
promake/: CMakeLists.txt  CMakePresets.json  README.md
promake/cmake/: CPM.cmake  clang-format.cmake  googleTest.cmake  proBasic.cmake  proBuild.cmake  proCPack.cmake  proDoc.cmake  proDownload.cmake  proFetch.cmake  proFind.cmake  proFormat.cmake  proGit.cmake  proInit.cmake  proPackage.cmake  proQt.cmake  proTest.cmake  sanitizer.cmake  x64-win-llvm.cmake  x64-win-llvm.toolchain.cmake
promake/init/: InitUCMake.cmake
rust_by_examples/: main.rs
the_lambda_stories/: CMakeLists.txt
threadpool/threadPool_Cpp/: CMakeLists.txt
threadpool/threadPool_Cpp/include/: ThreadPool.h
threadpool/threadPool_Cpp/scripts/: build.sh
threadpool/threadPool_Cpp/src/: main.cpp
typst/: README.md  myResume.typ  slides.typ  template.typ
web_components/: index.html  main.js
(+140 files in other folders)
