[package]
name = "mini-project-starter"
version = "0.1.0"
edition = "2021"
authors = ["proanimer <bukalala174@gmail.com>"]
description = "prpject starter for mini projects"
license = "MIT"
[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }
dialoguer = "0.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
ureq = "2.10.1"
