set(EXECUTABLE_SOURCES "main.cpp")

add_executable(${EXECUTABLE_NAME} ${EXECUTABLE_SOURCES})
target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${LIBRARY_NAME})

if(${ENABLE_WARNINGS})
  target_set_warnings(TARGET ${EXECUTABLE_NAME} ENABLE ${ENABLE_WARNINGS} ENABLE_WARNINGS_AS_ERRORS ${ENABLE_WARNINGS_AS_ERRORS})
endif()

if(${ENABLE_LTO})
  target_enable_lto(TARGET ${EXECUTABLE_NAME} ENABLE ${ENABLE_LTO})  
endif()
